--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ subprojects {
 	apply plugin: 'eclipse'
 	
 	group = 'ca.jahed.rtpoet.dsl'
-	version = '1.0.0-SNAPSHOT'
+	version = '1.0.1'
 	
 	sourceCompatibility = '1.8'
 	targetCompatibility = '1.8'
